--- a/style.css
+++ b/style.css
@@ -10,18 +10,28 @@ body{
     
     height: 100%;
 }
+
 .body-home{
-    background-image: url('images/background-01-port.png');
+    background-image: url('images/backgroud-image\ -port-1.jpeg.jpeg');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/*========== HEADER ==========*/
+.body-meals{
+    background-image: url('images/my\ logo.png');
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+/*============HEADER ============*/
 
 .header{
-    background-color: #1a8f2d;
+    background-color:rgb(21, 158, 83);
     
     width: 100%;
     height: 50px;
@@ -33,11 +43,10 @@ body{
     text-align: center;
 }
 
-
-.header i{
+.header img{
     float: left;
     padding: 17px 0px 0px 17px;
-    color: white;
+    color: rgb(40, 11, 95);
 }
 
 .header img{
@@ -46,33 +55,27 @@ body{
     padding-right: 25px;
 }
 
-/*========== HOME PAGE ==========*/
+/*============ HOME PAGE ============*/
 
 
 #home-logo-img{
-    width: 50px;
+    width: 80px;
     display: block;
     margin: auto;
     padding: 25px 10px 10px 10px;
 }
 
-#home-logo-text{
-    width: auto;
-    display: block;
-    margin: auto;
-    padding: 25px;
-}
+/*============ HOME PAGE MENU ============*/
 
-/*===== HOME PAGE MENU =====*/
 .home-menu-item{
     text-decoration: none;
     text-transform: uppercase;
     
-    color: rgb(133, 43, 43);
+    color: rgb(105, 18, 18);
     font-size: 25px;
     font-weight: bold;
     text-align: center;
-    border: 5px solid white;
+    border: 5px solid rgb(80, 15, 60);
     
     display: block;
     margin: auto;
@@ -80,64 +83,51 @@ body{
     width: 80%;
 }
 
-
-/*========== MEALS PAGE ==========*/
+/*============ MEALS PAGE ============*/
 
 #meals{
-    padding-top: 50px;
-    
+   padding-top: 50px;
 }
 
-/*===== MEALS PAGE MENU =====*/
+/*============ MEALS PAGE MENU ============*/
 
 .meals-list a{
     text-decoration: none;
 }
 
 .meals-list-item{
-    border: 5px solid #2d1375;
+    border: 5px solid rgb(161, 21, 21);
     margin: 10px;
 }
 
 .meals-list-item h1{
     font-weight: bold;
     font-size: 20px;
-    color: #4e080b;
+    color: rgb(30, 16, 109);
     padding-left: 10px;
 }
 
 .meals-list-item i{
     float: right;
-    color: #178057;
-    padding-right: 10px;
+    color: rgb(66, 17, 107);
+    padding-right: 20px;
 }
 
 .meals-list-item p{
     font-size: 15px;
     font-style: italic;
-    color: #4d4d4d;
+    color: red;
     margin-top: -7px;
     padding-left: 10px;
 }
 
+/*============ RECIPE PAGE ============*/
 
-.body-meals{
-    background-image: url('images/background-02-port.png');
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-/*========== RECIPE PAGE ==========*/
-
-#recipe {
+#recipe{    
     padding-top: 50px;
 }
 
-
-
-/*===== RECIPE DETAILS =====*/
+/*============ MEALS DETAILS ============*/
 
 .recipe-details img{
     width: 100%;
@@ -146,12 +136,12 @@ body{
 .recipe-details h1{
     font-size: 25px;
     text-align: center;
-    border: 5px solid #641212;
+    border: 5px solid rgb(114, 21, 21);
     margin: 10px;
     padding: 5px;
 }
 
-.recipe-details-info {
+.recipe-details-info{
     margin-left: 25px;
     margin-right: 25px;
 }
@@ -166,18 +156,9 @@ body{
     margin-left: 10px;
 }
 
-.recipe-details-steps {
-    padding-top: 20px;
-    
-}
+/*============ RESPONSIVE LAYOUT ============*/
 
-.recipe-details-steps ol{
-    padding-left: 28px;
-}
-
-/*========== RESPONSIVE LAYOUT ==========*/
-
-@media only screen and (min/width:600px) {
+@media only screen and (min-width:600px){
     #meals{
         width: 80%;
         margin: auto;
@@ -189,8 +170,8 @@ body{
     }
 }
 
-@media only screen and (min/width:1000px) {
-      #meals{
+@media only screen and (min-width:1000px){
+     #meals{
         width: 60%;
         margin: auto;
     }
@@ -201,9 +182,8 @@ body{
     }
 }
 
-
-@media only screen and (min/width:1500px) {
-      #meals{
+@media only screen and (min-width:1500px){
+     #meals{
         width: 40%;
         margin: auto;
     }
@@ -214,15 +194,24 @@ body{
     }
 }
 
-@media only screen and (min/width:720px) {
-    .body-home{
-        background-image: url('images/background-01-land.png')
+@media only screen and (min-width:720px){
+    #body-home{
+        background-image: url('images/herbs-spices-black_final.jpg')
     }
-    
-    .body-meals{
-        background-image: url('images/background-02-land.png')
+    #body-meals{
+        background-image: url('images/wood%202%20texture.jpg')
     }
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
